# BeeSense

./: .gitignore  README.md
data/labels/test/: 20251225104043_jpg.rf.2ad860b931479e6fd1817c281ebb025b.txt  20251225104046_jpg.rf.d82dfb7a365718885dc953eb03a1ed1e.txt  20251225104149_jpg.rf.75ddfe0fe559587679e1052afe6b0fa7.txt  20251225104248_jpg.rf.0b3168dec124454fd90bbcb37e68619f.txt  20251225104353_jpg.rf.bf9109157672b18da4598f36c36e8dd6.txt  (+5 more)
hardware/firmware/capture_traindata/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
hardware/firmware/capture_traindata/main/include/: sd_card.hpp
hardware/firmware/capture_traindata/main/src/: get_fattime.cpp  sd_card.cpp
hardware/firmware/esp32cam/BumblebeDetectionIDF/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
hardware/firmware/esp32cam/BumblebeDetectionIDF/main/include/: camera_pins.h  sd_card.hpp  sd_pins.h
hardware/firmware/esp32cam/BumblebeDetectionIDF/main/src/: sd_card.cpp
models/: README.md  deploy_to_esp32.sh  export_onnx.py  predict_pictures.py  prepare_calib_data.py  quantize_onnx_model.py  quantize_yolov8.py  requirements_esp32.txt  resize_pictures.py  test_picture.py  train.py  yolov11_bumblebee.yaml  yolov8_bumblebee.yaml
models/quantized_model/: bumblebee_detect_yolo11n.espdl  bumblebee_detect_yolo11n.json  espdet_pico_224_224_bumblebee.json  espdet_pico_96_96_bumblebee.espdl  espdet_pico_96_96_bumblebee.json  yolov8_bumblebee_quantized.espdl  yolov8_bumblebee_quantized.json
models/quantized_model_qvga/: yolov8_bumblebee_quantized.espdl  yolov8_bumblebee_quantized.json
(+367 files in other folders)
